package com.synergyhub.domain.entity;

import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;

import java.time.LocalDateTime;

@Entity
@Table(name = "audit_logs", indexes = {
    @Index(name = "idx_user_time", columnList = "user_id, created_at"),
    @Index(name = "idx_event_type", columnList = "event_type, created_at"),
    @Index(name = "idx_project_time", columnList = "project_id, created_at") // ✅ New Index for Activity Stream
})
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class AuditLog {
    
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "log_id")
    private Long id;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id")
    private User user;
    
    // ✅ NEW: Loose coupling to Project (stores ID only)
    // We use Integer instead of @ManyToOne Project to prevent issues if a project is hard-deleted,
    // and to keep log insertions extremely fast.
    @Column(name = "project_id")
    private Integer projectId;
    
    @Column(name = "event_type", nullable = false, length = 50)
    private String eventType;
    
    @Column(name = "event_details", columnDefinition = "TEXT")
    private String eventDetails;
    
    @Column(name = "ip_address", length = 45)
    private String ipAddress;
    
    @Column(name = "user_agent", length = 500)
    private String userAgent;
    
    @CreationTimestamp
    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;
}